[tool.poetry]
name = "swa-utils"
version = "0.1.0"
description = "Some utility functions I use all the time."
authors = ["Sebastian Ahn <wooahns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pint = "^0.20"
viztracer = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
